# pam-network-filter

./: .gitignore  Cargo.toml  README.md  build.rs  test.sh
.github/workflows/: main.yml  rust.yml
ffi/: pam.h
src/: addrinfo_builder.rs  assert.rs  auth.rs  c_utils.rs  config.rs  domain.rs  error.rs  ffi.rs  filter.rs  item.rs  lib.rs  log.rs  network.rs  pam.rs  parser.rs  pattern.rs  type_traits.rs
src/domain/: addrinfo_builder.rs  addrinfo_smart_pointer.rs  mod.rs
src/ffi/: mod.rs  pam.rs  syslog.rs  types.rs
src/macros/: assert.rs  error.rs  mod.rs
tests/c/: CMakeLists.txt  test.sh
tests/c/include/: pam.h
tests/c/src/: CMakeLists.txt  main.cc  modstruct-nullcheck.cc  modstruct-return-check.cc  test.cc
tests/integration/: Containerfile  entrypoint.sh  test.sh
tests/integration/cases/: common.sh
tests/integration/cases/ip-tp-single/: sshd  test.conf  test.sh
tests/integration/cases/user-tp-single/: sshd  test.sh
