[package]
authors = ["Hyundeok Park <p.hyundeok76@gmail.com>"]
build = "build.rs"
name = "pam-network-filter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
libc = "0.2.175"

[build-dependencies]
bindgen = "0.72.0"
